<resources>
    <string name="app_name">Рик и Морти App</string>

    <string name="menu_title_episodes">Эпизоды</string>
    <string name="menu_title_location">Локации</string>
    <string name="menu_title_characters">Персонажи</string>
    <string name="menu_title_profile">Профиль</string>


    <string name="ch_details_current_location">Текущая локация</string>
    <string name="ch_details_origin_location">Место рождения</string>
    <string name="ch_details_status">Статус</string>
    <string name="ch_details_species">Раса</string>
    <string name="ch_details_gender">Пол</string>
    <string name="ch_details_name">Имя</string>
    <string name="ch_details_rate_person">Оцените персонажа</string>


    <string name="navigation_profile">Пользователь</string>
    <string name="navigation_favorites">Избранное</string>
    <string name="navigation_settings">Настройки</string>
    <string name="navigation_about">О приложении</string>

    <string name="search_placeholder_text">Воспользуйтесь поиском,чтобы найти интересующих Вас персонажей</string>
    <string name="search_search_hint_text">искать здесь . . .</string>

    <string name="filter_title">Фильтр</string>
    <string name="filter_status_title">Статус жизни</string>
    <string name="filter_status_alive">Живой</string>
    <string name="filter_status_dead">Мертвый</string>
    <string name="filter_status_unknown">Неизвестно</string>

    <string name="filter_species_title">Раса</string>
    <string name="filter_species_human">Человек</string>
    <string name="filter_species_alien">Инопланетянин</string>

    <string name="filter_gender_title">Пол</string>
    <string name="filter_gender_man">Мужчина</string>
    <string name="filter_gender_woman">Женщина</string>
    <string name="filter_gender_genderless">Пол отсутствует</string>
    <string name="filter_gender_unknown">Неизвестно</string>

    <string name="filter_apply">Применить</string>
    <string name="filter_chip_title">%1$s: %2$s</string>
    <string name="search_empty_error">Ничего не найдено</string>


</resources>
