<?xml version="1.0" encoding="utf-8"?>
<com.example.rickandmortyapp.core.RoundedLinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorLightGray"
    android:orientation="vertical"
    android:overScrollMode="never"
    android:paddingBottom="16dp">

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:paddingTop="16dp"
        android:paddingBottom="16dp"
        android:tint="@color/colorUpperGray"
        app:srcCompat="@drawable/ic_dialog_header_divider" />

    <LinearLayout
        android:id="@+id/layout_profile"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_gravity="center"
            android:layout_marginStart="36dp"
            android:tint="@color/colorPrimary"
            app:srcCompat="@drawable/ic_person" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="36dp"
            android:layout_weight="1"
            android:text="@string/navigation_profile"
            android:textSize="20sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_gravity="center"
            android:layout_marginStart="36dp"
            android:tint="@color/colorPrimary"
            app:srcCompat="@drawable/ic_favorite" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="36dp"
            android:layout_weight="1"
            android:text="@string/navigation_favorites"
            android:textSize="20sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_gravity="center"
            android:layout_marginStart="36dp"
            android:tint="@color/colorPrimary"
            app:srcCompat="@drawable/ic_settings" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="36dp"
            android:layout_weight="1"
            android:text="@string/navigation_settings"
            android:textSize="20sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_gravity="center"
            android:layout_marginStart="36dp"
            android:tint="@color/colorPrimary"
            app:srcCompat="@drawable/ic_new_releases" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="36dp"
            android:layout_weight="1"
            android:text="@string/navigation_about"
            android:textSize="20sp" />

    </LinearLayout>

</com.example.rickandmortyapp.core.RoundedLinearLayout>